# Jira_Automation_Framework

./: README.md  cli.py  config.py  config_.json  jira_client.py  jira_numbers.csv  launch.json  logger.py  pyproject.toml  requirements.txt  task_manager.py
